pmd inspired cleanups
git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@1613 a4c711aa-641f-0410-879d-9b464e52b682